[package]
name = "simple-pixels"
version = "0.10.0"
description = "Create a window and throw some pixels on it without accessing low-level stuff, carrying tons of dependencies or linking C libraries"
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Solar-Falcon/simple-pixels"
categories = ["rendering::engine"]

[dependencies]
miniquad = "=0.4.0-alpha.10"
rgb = "0.8"
rustc-hash = "1"
simple-blit = "0.8"
