[package]
name = "simple-pixels"
version = "0.13.0"
description = "Create a window and throw some pixels on it without accessing low-level stuff, carrying tons of dependencies or linking C libraries"
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Solar-Falcon/simple-pixels"
categories = ["rendering::engine"]

[dependencies]
miniquad = "0.4"
rgb = "0.8"
rustc-hash = "1"
simple-blit = "1"

[features]
default = []
log-impl = ["miniquad/log-impl"]
