[package]
name = "simple-pixels"
version = "0.15.0"
description = "Create a window and throw some pixels on it without accessing low-level stuff, carrying tons of dependencies or linking C libraries"
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Solar-Falcon/simple-pixels"
categories = ["rendering::engine"]

[dependencies]
miniquad = "=0.4.6"
rgb = "0.8"
rustc-hash = "2"
simple-blit = "2"
